--- a/vignettes/Hazard.Rmd
+++ b/vignettes/Hazard.Rmd
@@ -75,37 +75,39 @@ In this vignette, [CCTE Hazard APIs](https://api-ccte.epa.gov/docs/hazard.html) 
 
 Data for the Hazard APIs comes ToxValDB. The Toxicity Value Database (ToxValDB) includes data on thousands of chemicals from tens of thousands of records, with an emphasis on quantitative estimates of relevant points-of-departure from in vivo toxicology studies, such as no- and low-observable adverse effect levels, screening levels, reference doses, tolerable daily intake, etc. 
 
-This resource is a compilation of information sourced from multiple public datasets, databases and open literature.More information on ToxValDB can be found at <https://www.epa.gov/comptox-tools/downloadable-computational-toxicology-data#AT>.
+This resource is a compilation of information sourced from multiple public datasets, databases and open literature. More information on ToxValDB can be found at <https://www.epa.gov/comptox-tools/downloadable-computational-toxicology-data#AT>.
 
 ## Functions
 
 Several ccdR functions are used to access the CCTE Hazard API data.
 
-### Get hazard data by dtxsid
+### Hazard Resource
 
-`get_hazard_by_dtxsid()` retrieves all hazard data, both human and ecotox data.
+#### Get Hazard Data by DTXSID
+
+`get_hazard_by_dtxsid()` retrieves all hazard data, both human and EcoTox data.
 
 ```{r ccdR all hazard, message=FALSE, eval=FALSE}
 res_dt <- get_hazard_by_dtxsid(DTXSID = 'DTXSID7020182')
 ```
 
-#### Get human hazard by dtxsid
+#### Get Human Hazard Data by DTXSID
 
-`get_human_hazard_by_dtxsid()` retrieves only the human hazard data.
+`get_human_hazard_by_dtxsid()` retrieves only human hazard data.
 
 ```{r ccdR human hazard, message=FALSE, eval=FALSE}
 res_dt <- get_human_hazard_by_dtxsid(DTXSID = 'DTXSID7020182')
 ```
 
-#### Get ecotox hazard by dtxsid
+#### Get EcoTox Hazard Data by DTXSID
 
-`get_ecotox_hazard_by_dtxsid()` retrieves only the ecotox hazard data.
+`get_ecotox_hazard_by_dtxsid()` retrieves only ecological toxicity hazard data.
 
 ```{r ccdR ecotox hazard, message=FALSE, eval=FALSE}
 res_dt <- get_ecotox_hazard_by_dtxsid(DTXSID = 'DTXSID7020182')
 ```
 
-### Skin eye resource
+### Skin Eye Resource
 
 `get_skin_eye_hazard()` retrieves hazard data specific to skin and eye hazard.
 
@@ -113,7 +115,7 @@ res_dt <- get_ecotox_hazard_by_dtxsid(DTXSID = 'DTXSID7020182')
 res_dt <- get_skin_eye_hazard(DTXSID = 'DTXSID7020182')
 ```
 
-### Cancer resource
+### Cancer Resource
 
 `get_cancer_hazard()` retrieves cancer hazard data. 
 
@@ -121,9 +123,9 @@ res_dt <- get_skin_eye_hazard(DTXSID = 'DTXSID7020182')
 res_dt <- get_cancer_hazard(DTXSID = 'DTXSID7020182')
 ```
 
-### Genetox resource
+### Genetox Resource
 
-`get_genetox_summary()` retrieves summary level data for genetox data associated to a chemical.
+`get_genetox_summary()` retrieves summary level data for genotoxicity data associated to a chemical.
 
 ```{r ccdR genetox summary hazard, message=FALSE, eval=FALSE}
 res_dt <- get_genetox_summary(DTXSID = 'DTXSID7020182')
