9 added warning=FALSE for snippet in chemical vignette

--- a/vignettes/Chemical.Rmd
+++ b/vignettes/Chemical.Rmd
@@ -46,7 +46,7 @@ if (!library(ccdR, logical.return = TRUE)){
 }
 ```
 
-```{r, echo=FALSE}
+```{r, echo=FALSE, warning=FALSE}
 # Used to visualize data in a variety of plot designs
 library(ggplot2)
 library(gridExtra)
