Removed examples to reduce size of vignette and saved http responses. Reworded conclusion.

--- a/vignettes/Bioactivity.Rmd
+++ b/vignettes/Bioactivity.Rmd
@@ -188,162 +188,10 @@ res_dt <- get_bioactivity_details(AEID = "891", API_key = apikey, Server = paste
 printFormattedTable(res_dt[205:210,], c(ncol(res_dt)-2)) # printed using custom formatted table
 ```
 
-## Example Use Case: Comparing Bioactivity Data Across Chemical Lists
-
-The fourth Drinking Water Contaminant Candidate List (CCL4) is a set of chemicals that "...are not subject to any proposed or promulgated national primary drinking water regulations, but are known or anticipated to occur in public water systems...." Moreover, this list "...was announced on November 17, 2016. The CCL 4 includes 97 chemicals or chemical groups and 12 microbial contaminants...." The National-Scale Air Toxics Assessments (NATA) is "... EPA's ongoing comprehensive evaluation of air toxics in the United States... a state-of-the-science screening tool for State/Local/Tribal agencies to prioritize pollutants, emission sources and locations of interest for further study in order to gain a better understanding of risks... use general information about sources to develop estimates of risks which are more likely to overestimate impacts than underestimate them...."  
-
-These lists can be found in the CCD at [CCL4](https://comptox.epa.gov/dashboard/chemical-lists/CCL4) with additional information at [CCL4 information](https://www.epa.gov/ccl/contaminant-candidate-list-4-ccl-4-0) and [NATADB](https://comptox.epa.gov/dashboard/chemical-lists/NATADB) with additional information at [NATA information](https://www.epa.gov/national-air-toxics-assessment). The quotes from the previous paragraph were excerpted from list detail descriptions found using the CCD links.
-
-In this example use case, bioactivity data will be compared between a water contaminant priority and an air toxics list.  
-
-### Obtain Lists of Chemicals
-
-First, confirm the chemical list to query. 
-
-```{r}
-options(width = 100)
-ccl4_information <- get_public_chemical_list_by_name('CCL4')
-print(ccl4_information, trunc.cols = TRUE)
-
-natadb_information <- get_public_chemical_list_by_name('NATADB')
-print(natadb_information, trunc.cols = TRUE)
-```
-Next, retrieve the list of chemicals associated with each list.
-
-```{r}
-ccl4 <- get_chemicals_in_list('ccl4')
-ccl4 <- data.table::as.data.table(ccl4)
-
-natadb <- get_chemicals_in_list('NATADB')
-natadb <- data.table::as.data.table(natadb)
-```
-
-### Review Bioactivity Data for a Single Chemical
-
-ToxCast data is made accessible via the CompTox Chemicals Dashboard (CCD). After navigating to a chemical of interest, select Bioactivity > ToxCast Summary to explore available ToxCast data. The ToxCast bioactivity module presents a view of potency and relative efficacy metrics across ToxCast endpoints for chemicals of interest, such as shown for BPA below. 
-
-<center>
-
-![<font style="font-size:15px"><i>Figure 2: BPA ToxCast Summary Plot</i></font>](./Pictures/CCD_BPA_Bioactivity_ToxCast_TOP.png)
-![<font style="font-size:15px"><i>Figure 3: BPA ToxCast Summary Grid</i></font>](./Pictures/CCD_BPA_Bioactivity_ToxCast_BOTTOM.png)
-</center>
-
-The ToxCast bioactivity module includes a summary plot, enabling visual response comparisons across assay endpoints, and a summary grid for exporting all available data for a chemical of interest.
-
-CCTE APIs can streamline the process of retrieving this information in a programmatic fashion. Before continuing the analysis of the two chemical lists CCL4 and NATADB, assessing bioactivity data associated with a single chemical (Bisphenol A) via web interface and *ccdR* functions is shown below. 
-
-<center>
-
-![<font style="font-size:15px"><i>Figure 4: CCTE Bioactivity API Web Interface</i></font>](./Pictures/Bioactivity_data_resource.png)
-
-</center>
-
-First, retrieve all available multiple concentration data for Bisphenol A by DTXSID:
-
-```{r}
-bpa_bioactivity <- get_bioactivity_details(DTXSID = 'DTXSID7020182', Server = stg_bioactivity_server)
-bpa_bioactivity <- data.table::as.data.table(bpa_bioactivity)
-
-head(bpa_bioactivity)
-```
-
-Next, it may be helpful to examine the dimensions and column names of the output.
-
-```{r, eval=FALSE}
-dim(bpa_bioactivity)
-names(bpa_bioactivity)
-```
-
-In reviewing the  number of dose response data associated with Bisphenol A, `aeid` value 2037 appears to be the most represented endpoint. To learn more about this endpoint, we retrieve the associated assay annotation information.
-
-```{r, eval=FALSE, include=FALSE}
-sort(bpa_bioactivity[, unique(aeid)])
-
-bpa_bioactivity[, .(Number = .N), by = .(aeid)][order(-Number, aeid),]
-```
-
-
-```{r}
-assay_2037 <- get_annotation_by_aeid(AEID = 2037, Server = 'https://api-ccte-stg.epa.gov/bioactivity')
-assay_2037 <- data.table::as.data.table(assay_2037)
-
-head(assay_2037)
-```
-
-### Review Bioactivity Data for Chemical Lists
-
-Then, if curious about other chemicals tested for this same endpoint:
-
-```{r}
-assay_2037_data <- get_bioactivity_details(AEID = 2037, Server = stg_bioactivity_server)
-assay_2037_data <- data.table::as.data.table(assay_2037_data)
-
-head(assay_2037_data)
-```
-
-Let us now look at which chemicals from each data set have assay data associated to `aeid` value 2037.
-
-```{r}
-ccl4_2037 <- intersect(ccl4$dtxsid, assay_2037_data$dtxsid)
-natadb_2037 <- intersect(natadb$dtxsid, assay_2037_data$dtxsid)
-
-ccl4_2037
-natadb_2037
-```
-We do the following search to determine the assay results for chemicals in each of CCL4 and NATADB that have assay `aeid` value 2037.
-
-```{r}
-ccl4_2037 <- assay_2037_data[dtxsid %in% ccl4_2037, ][order(dtxsid), ]
-natadb_2037 <- assay_2037_data[dtxsid %in% natadb_2037, ][order(dtxsid), ]
-```
-
-We calculate the mean `ac50` value for the associated data and grouped by chemical.
-
-```{r fig.align='center',class.source="scroll-200",message=FALSE}
-ccl4_2037[!is.na(ac50), .(Mean_AC50 = mean(ac50))]
-ccl4_2037[!is.na(ac50), .(Mean_AC50 = mean(ac50)), by = .(dtxsid)][order(-Mean_AC50),]
-
-natadb_2037[!is.na(ac50), .(Mean_AC50 = mean(ac50))]
-natadb_2037[!is.na(ac50), .(Mean_AC50 = mean(ac50)), by = .(dtxsid)][order(-Mean_AC50),]
-```
-
-From this we observe that the average `ac50` values of the chemicals in CCL4 that have assay data for `aeid` 2037 is 20.38932 while for NATADB it is 37.8065. The maximum `ac50` values for CCL4 chemicals is 50, shared by the four chemicals identified by DTXSID0021464, DTXSID4022361, DTXSID9032113, and DTXSID5020576 while for NATADB the max value if 90.59979 given by the chemical identified by DTXSID9020299. For CCL4, the minimum `ac50` value for this set of chemicals is 0.4138751 given by the chemical identified by DTXSID8031865 and for NATADB is 4.67915 given by the chemical identified by DTXSID4021395.
-
-We look at the same assay result for BPA to compared the values we just calculated.
-
-```{r}
-bpa_bioactivity[aeid %in% 2037, .(Mean_AC50 = mean(ac50))]
-```
-
-From this, we see that the average `ac50` value for `aeid` value 2037 Assay data for CCL4 chemicals is distributed above and below that of BPA in equal quantity, while for NATADB chemicals, all but two of 13 are higher. 
-
-To investigate additional endpoints, we could do the following.
-
-```{r, eval = FALSE}
-bpa_aeid_batch <- get_bioactivity_details_batch(AEID = unique(bpa_bioactivity$aeid), Server = stg_bioactivity_server)
-all_bpa_aeid <- data.table::rbindlist(bpa_aeid_batch, use.names = TRUE)
-
-ccl4_bpa_aeid <- all_bpa_aeid[dtxsid %in% ccl4[, unique(dtxsid)], ][order(dtxsid)]
-natadb_bpa_aeid <- all_bpa_aeid[dtxsid %in% natadb[, unique(dtxsid)], ][order(dtxsid)]
-
-ccl4_bpa_aeid[!is.na(ac50), .(Mean_AC50 = mean(ac50))]
-ccl4_bpa_aeid[!is.na(ac50), .(Mean_AC50 = mean(ac50)), by = .(dtxsid)][order(-Mean_AC50),]
-
-natadb_bpa_aeid[!is.na(ac50), .(Mean_AC50 = mean(ac50))]
-natadb_bpa_aeid[!is.na(ac50), .(Mean_AC50 = mean(ac50)), by = .(dtxsid)][order(-Mean_AC50),]
-```
-In the previous chunk, we used the batch search version of the `get_bioactivity_details()` function. 
-
-To finish this example off, we could compare these average `ac50` values with those found in the BPA bioactivity information. We filter out NA values, take the mean of the `ac50` values grouped by `aeid` value.
-
-```{r}
-bpa_bioactivity[!is.na(ac50), .(Mean_AC50 = mean(ac50)), by = .(aeid)]
-```
-
 
 ## Conclusion
 
-In this vignette, a variety of functions that access different types of data found in the `Bioactivity` endpoints of the CCTE APIs were explored. While this exploration was not exhaustive, it provides a basic introduction to how one may access data and work with it. Additional endpoints and corresponding functions exist and we encourage the user to explore these while keeping in mind the examples contained in this vignette.
+In this vignette, a variety of functions that access different types of data found in the `Bioactivity` endpoints of the CCTE APIs were listed. We encourage the reader to explore the data accessible through these endpoints work with it to get a better understanding of what data is available. Additional endpoints and corresponding functions exist and we encourage the user to explore these.
 
 ```{r breakdown, echo = FALSE, results = 'hide'}
 # This chunk will be hidden in the final product. It serves to undo defining the
